# bridge-cef

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: bootstrap-decision.md  cef-distribution-bootstrap.md  client-integration-bridge.md  cross-repo-contract-v1.md  first-native-proof.md  initial-backend-contract.md  linux-osr-sample-parity-plan.md  linux-prereqs.md  migration-slices.md  platform-selection-slice-2026-04-06.md  presentation-seam-v2.md  runtime-integration-boundary-next-step.md  runtime-integration-boundary-v1.md  runtime-seam-tightening-2026-04-06.md  shell-integration-seam.md  windows-bringup-slice-2026-04-06.md  windows-enablement-slice-1-2026-04-06.md  windows-host-osr-surface-slice-2026-04-06.md  windows-host-scaffold-2026-04-06.md  windows-host-services-slice-2026-04-06.md  windows-input-plumbing-slice-2026-04-06.md  windows-lifecycle-correctness-slice-2026-04-06.md  windows-native-host-skeleton-2026-04-06.md  windows-runner-bootstrap-skeleton-2026-04-06.md  windows-runner-scaffold-2026-04-06.md  windows-runtime-host-smoke-recipe-2026-04-06.md  windows-shortcut-correctness-slice-2026-04-06.md  windows-smoke-observability-slice-2026-04-06.md
include/engine_cef/: integration_bridge.h  types.h
src/: cef_app_host.cc  cef_app_host.h  cef_backend.cc  cef_backend.h  cef_backend_types.h  cef_browser_handler.cc  cef_browser_handler.h  cef_integration_bridge.cc  cef_integration_bridge.h  cef_linux_main_runner.cc  cef_linux_main_runner.h  cef_osr_host_gtk.cc  cef_osr_host_gtk.h  cef_runtime_entry.cc  cef_runtime_entry.h  cef_runtime_host.h  cef_runtime_runner.h  cef_runtime_runner_factory.cc  cef_runtime_window_host_factory.cc  cef_runtime_window_host_factory.h  main_linux.cc  main_stub.cpp  runtime_host_probe_linux.cc
src/win/: cef_runtime_runner_win.cc  cef_runtime_runner_win.h  cef_runtime_window_host_win.cc  cef_runtime_window_host_win.h
tests/: bridge_frame_contract_test.cpp  runtime_host_bridge_observer_test.cpp  runtime_host_status_transition_test.cpp
